--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.06.2022 08:43:44</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.06.2022 09:11:26</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Středa, 15. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Uzená polévka se zeleninou</strong>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hovězí s koprovou omáčkou a vařeným bramborem NEBO houskovým knedlíkem</strong>
+<strong>Vepřová JAMBALAYA</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							137,-
 						</span>
 </p>
 <p>
-<strong>Caesar salát s kuřecím masem, krutony a parmazánem</strong>
+<strong>Smažené kuřecí paličky s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
@@ -142,7 +142,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s brokolici a pazitkovym jogurtovym dipem, korenena ryze, salatek 149</li><li>Peceny filet z cerstveho africkeho sumecka s brokolici a pazitkovym jogurtovym dipem, korenena ryze, salatek 175</li><li>Maafe – senegalske pikantni hovezi s rajcaty, paprikami, zazvorem a arasidy, jasminova ryze, salatek 149</li><li>Pecena prsicka z divoke kachny se svestkovou omackou,  gratinovane brambory, salatek 175</li><li>Burrito s pecenou mladou cervenou repou, ledovym salatem a ovcim balkanskym syrem, avokadove guacamole, pohanka, salatek {L} 149</li></ol>
+<ol><li>Peceny jihocesky pstruh s reckym citronovo-koprovym dresinkem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 149</li><li>Spagety s chobotnici a kalamary, cerstvymi rajcaty, rimskym salatem a petrzelkovym pestem {L} 175</li><li>Korejske restovane veprove nudlicky s miso, sezamem, chilli a cesnekem, ryzove nudle, kedlubnove cukemono se zazvorem 149</li><li>Smazene rizecky z krutich prsou, stouchane brambory se zelenou cibulkou, salatek z cervene repy {L} 175</li><li>Bramborovy quiche s brokolici, listovym spenatem, cibuli a vejci zapeceny s ementalem, listovy salatek 149</li></ol>
 </td>
 </tr>
 </table>
