--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.06.2022 12:41:42</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.06.2022 13:10:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -132,6 +132,75 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">120 g</td>
+<td class="title">Marinovaný losos Gravlax balený ve švédském chlebu s rukolou,
+salátovou okurkou, citrusovým zákysem a koprem 1a,3,4,7</td>
+<td class="pricem">179 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Krémová pivní cibulačka s uzeným špekem, tymiánem a sýrovým toastem 1a,7</td>
+<td class="pricem">79 Kč</td>
+</tr>
+<tr>
+<td class="amount">400 g</td>
+<td class="title">Teriyaki Udon nudle s hovězím flankem, jarní cibulkou, Pak Choi salátem,
+sójovými klíčky a opraženým sezamem 6,11,12</td>
+<td class="pricem">225 Kč</td>
+</tr>
+<tr>
+<td class="amount">180 g</td>
+<td class="title">Grilované kachní prso na jarním zeleninovém salátu s fenyklem, glazovanými hruškami
+v červeném víně a redukcí z lesních plodů s rozpečenou bylinkovou bagetou 1a,3,7,12	</td>
+<td class="pricem">249 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Řezy z lotusovým sušenek s mascarpone a pekanovými ořechy 1a,3,7,8e</td>
+<td class="pricem">99 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="title">Gin Tonic Okurkový<br/>
+gin / tonic / čerstvá okurka / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic PINK<br/>
+malinový gin / tonic  / lesní plody / ovoce / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Zázvorový / Ginger<br/>
+gin / zázvorový tonic / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Targa Florio<br/>
+gin / citronová limonáda / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Pomerančový / Orange<br/>
+pomerančový gin / tonic / pomeranč / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount">0,33l</td><td class="title">Kulajda s brambory, houbami a vejci 1a,3,7</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Steak z vepřové pečeně s cibulovo žampionovou fáší zapečený uzeným sýrem s mačkanými brambory a salátem z polníčku 1a,7</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Pečené kachní stehno s červeným zelím a našimi karlovarskými knedlíky 1a,3,7,12</td><td class="pricem">159 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Tradiční řecká musaka s ragú z mletého masa, brambory, lilkem, rajčaty, bešamelem a sýrem s omáčkou z drcených rajčat 1a,3,7,9</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
